[DDW-797]: Fix long url overflow on stakepool tooltip

--- a/source/renderer/app/components/staking/stake-pools/StakePoolTooltip.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolTooltip.scss
@@ -201,6 +201,14 @@
   font-size: 14px;
   line-height: 1.36;
   margin-bottom: 18px;
+  max-width: 100%;
+
+  .urlContent {
+    max-width: calc(100% - 14px);
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 
   & > span {
     vertical-align: text-top;
